basic functionality complete

--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,16 @@
   box-sizing: border-box;
 }
 
-main {
+body {
   background-color: skyblue;
 }
 
 .search-results {
   background-color: white;
   border: 1px solid black;
+  margin: auto;
   margin-top: 50px;
-  min-width: 100%;
+  max-width: 75%;
   min-height: 200px;
 }
 
